--- a/zyj_tokenizer/tokenizer_config.json
+++ b/zyj_tokenizer/tokenizer_config.json
@@ -28,16 +28,16 @@
             "special": true
         }
     },
-    "addtional_special tokens": [],
+    "addtional_special_tokens": [],
     "bos_token": "<s>",
-    "eos token": "</s>",
-    "clean up tokenization_spaces": false,
+    "eos_token": "</s>",
+    "clean_up_tokenization_spaces": false,
     "legacy": true,
-    "model max length": 32768,
-    "pad token": "<unk>",
+    "model_max_length": 32768,
+    "pad_token": "<unk>",
     "sp_model_kwargs": {},
     "spaces_between_special_tokens": false,
-    "tokenizer class": "PreTrainedTokenizerFast",
-    "unk token": "<unk>",
+    "tokenizer_class": "PreTrainedTokenizerFast",
+    "unk_token": "<unk>",
     "chat_template": "{% if messages[0]['role'] == 'system' %} {% set system_message = messages[0]['content'] %} {{'<s>systeml\\n' + system_message +'</s\\n' }}{% else %}{{ '<s>system\\n 你是 zyj_llm，是一个有用的人工智能助手。</s>\\n' }} {% endif %} {% for message in messages %} {% set content = message['content'] %}{% if message['role'] == 'user' %} {{'<s>user\\n'+ content +'</s>\\n<s>assistant\\n'}} {% elif message['role'] == 'assistant’%} {{ content +'</s>'+\\n'}}{% endif %}{% endfor %}"
 }
